<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="@dimen/screen_padding_horizontal"
    android:paddingVertical="@dimen/screen_padding_vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/card_view_content_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Саратов"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceTitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/temperature"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCity" />

            <ImageView
                android:id="@+id/imageWeather"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Дождь"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceBodyLarge"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageWeather" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/wind"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/humidity"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWind" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/pressure"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintEnd_toStartOf="@+id/thermometerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHumidity" />

            <hh.school.lesson_9_zemskov.ThermometerView
                android:id="@+id/thermometerView"
                android:layout_width="40dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDownloadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_download_file_text" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageViewDownloadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no" />
</LinearLayout>